--- a/thirdapp/public/css/styles.css
+++ b/thirdapp/public/css/styles.css
@@ -19,3 +19,35 @@
     font-size:40px;
     text-align: center;
 }
+
+/*=====================
+        Artists List
+=======================*/
+
+.artist_list{
+  box-sizing: border-box;
+  padding: 10px 30px;  
+}
+
+.artist_list .artist_item{
+    display: block;
+    height: 300px;
+    background-size: cover !important;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.artist_list .artist_item div{
+    background:blueviolet;
+    color:#fff;
+    position: absolute;
+    bottom:0;
+    padding: 10px;
+}
+
+.artist_list h4 {
+    text-align: center;
+    font-size:30px;
+    font-weight: 100;
+    margin: 20px 0px
+}
